style: fix select-language flags align bug

--- a/src/app/components/select-language/select-language.component.css
+++ b/src/app/components/select-language/select-language.component.css
@@ -41,6 +41,7 @@
 
     .language__option {
       display: flex;
+      justify-content: space-between;
       align-items: center;
       padding: 0px 8px;
       &:hover {
@@ -48,6 +49,10 @@
         color: #fff;
       }
     }
+  }
+
+  .option__name{
+    width: 34px;
   }
 
   .image__container {
@@ -59,6 +64,7 @@
       width: 100%;
       height: 100%;
       border-radius: 4px;
+      border: 1px solid #000;
     }
   }
 }
